Fix lead text on mobile

--- a/css/site.css
+++ b/css/site.css
@@ -28,7 +28,7 @@ h1.large-heading {
     margin-bottom: 20px;
 }
 
-.lead {
+p.lead {
     font-size: 21px;
 }
 
